// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalTrackSelector drawer widget renders with a couple of categorized tracks 1`] = `
<div
  className="inject-HierarchicalTrackSelector-with-rootModel-root-1"
>
  <div
    className="MuiFormControl-root-3"
  >
    <label
      className="MuiFormLabel-root-18 MuiInputLabel-root-7 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14"
      data-shrink={true}
    >
      Filter Tracks
    </label>
    <div
      className="MuiInputBase-root-38 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-formControl-39 MuiInput-formControl-26 MuiInputBase-adornedStart-42 MuiInputBase-adornedEnd-43"
      onClick={[Function]}
    >
      <div
        className="MuiInputAdornment-root-55 MuiInputAdornment-positionStart-57"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-59"
        >
          search
        </span>
      </div>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-48 MuiInput-input-33 MuiInputBase-inputAdornedStart-53 MuiInputBase-inputAdornedEnd-54"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <div
        className="MuiInputAdornment-root-55 MuiInputAdornment-positionStart-57"
      >
        <button
          className="MuiButtonBase-root-74 MuiIconButton-root-68"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-73"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-59"
            >
              clear
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-87"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    className="MuiFormGroup-root-85"
  />
  <div
    className="MuiPaper-root-164 MuiPaper-elevation1-167 MuiExpansionPanel-root-161 MuiExpansionPanel-expanded-162"
  >
    <div
      aria-expanded={true}
      className="MuiButtonBase-root-74 MuiExpansionPanelSummary-root-191 MuiExpansionPanelSummary-expanded-192"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiExpansionPanelSummary-content-195 MuiExpansionPanelSummary-expanded-192"
      >
        <span
          className="MuiTypography-root-126 MuiTypography-button-137"
        >
          Foo Category (1)
        </span>
      </div>
      <div
        aria-hidden="true"
        className="MuiButtonBase-root-74 MuiIconButton-root-68 MuiExpansionPanelSummary-expandIcon-196 MuiExpansionPanelSummary-expanded-192"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiIconButton-label-73"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-59"
          >
            expand_more
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-87"
        />
      </div>
    </div>
    <div
      className="MuiCollapse-container-197 MuiCollapse-entered-198"
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <div
        className="MuiCollapse-wrapper-199"
      >
        <div
          className="MuiCollapse-wrapperInner-200"
        >
          <div
            className="MuiExpansionPanelDetails-root-201 inject-HierarchicalTrackSelector-with-rootModel-expansionPanelDetails-2"
          >
            <div
              className="MuiFormGroup-root-85"
            >
              <label
                aria-describedby={null}
                className="MuiFormControlLabel-root-101"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title=""
              >
                <span
                  className="MuiButtonBase-root-74 MuiIconButton-root-68 MuiPrivateSwitchBase-root-113 MuiCheckbox-root-107 MuiCheckbox-colorSecondary-112 MuiPrivateSwitchBase-checked-114 MuiCheckbox-checked-108"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-73"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-117"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <input
                      checked={true}
                      className="MuiPrivateSwitchBase-input-116"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-87"
                  />
                </span>
                <span
                  className="MuiTypography-root-126 MuiTypography-body1-135 MuiFormControlLabel-label-106"
                >
                  Foo Track
                </span>
              </label>
            </div>
            <div
              className="MuiPaper-root-164 MuiPaper-elevation1-167 MuiExpansionPanel-root-161 MuiExpansionPanel-expanded-162"
            >
              <div
                aria-expanded={true}
                className="MuiButtonBase-root-74 MuiExpansionPanelSummary-root-191 MuiExpansionPanelSummary-expanded-192"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="MuiExpansionPanelSummary-content-195 MuiExpansionPanelSummary-expanded-192"
                >
                  <span
                    className="MuiTypography-root-126 MuiTypography-button-137"
                  >
                    Bar Category (1)
                  </span>
                </div>
                <div
                  aria-hidden="true"
                  className="MuiButtonBase-root-74 MuiIconButton-root-68 MuiExpansionPanelSummary-expandIcon-196 MuiExpansionPanelSummary-expanded-192"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <span
                    className="MuiIconButton-label-73"
                  >
                    <span
                      aria-hidden="true"
                      className="material-icons MuiIcon-root-59"
                    >
                      expand_more
                    </span>
                  </span>
                  <span
                    className="MuiTouchRipple-root-87"
                  />
                </div>
              </div>
              <div
                className="MuiCollapse-container-197 MuiCollapse-entered-198"
                style={
                  Object {
                    "minHeight": "0px",
                  }
                }
              >
                <div
                  className="MuiCollapse-wrapper-199"
                >
                  <div
                    className="MuiCollapse-wrapperInner-200"
                  >
                    <div
                      className="MuiExpansionPanelDetails-root-201 inject-HierarchicalTrackSelector-with-rootModel-expansionPanelDetails-2"
                    >
                      <div
                        className="MuiFormGroup-root-85"
                      >
                        <label
                          aria-describedby={null}
                          className="MuiFormControlLabel-root-101"
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          title=""
                        >
                          <span
                            className="MuiButtonBase-root-74 MuiIconButton-root-68 MuiPrivateSwitchBase-root-113 MuiCheckbox-root-107 MuiCheckbox-colorSecondary-112 MuiPrivateSwitchBase-checked-114 MuiCheckbox-checked-108"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex={null}
                          >
                            <span
                              className="MuiIconButton-label-73"
                            >
                              <svg
                                aria-hidden="true"
                                className="MuiSvgIcon-root-117"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                />
                              </svg>
                              <input
                                checked={true}
                                className="MuiPrivateSwitchBase-input-116"
                                data-indeterminate={false}
                                onChange={[Function]}
                                type="checkbox"
                              />
                            </span>
                            <span
                              className="MuiTouchRipple-root-87"
                            />
                          </span>
                          <span
                            className="MuiTypography-root-126 MuiTypography-body1-135 MuiFormControlLabel-label-106"
                          >
                            Bar Track
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HierarchicalTrackSelector drawer widget renders with a couple of uncategorized tracks 1`] = `
<div
  className="inject-HierarchicalTrackSelector-with-rootModel-root-1"
>
  <div
    className="MuiFormControl-root-3"
  >
    <label
      className="MuiFormLabel-root-18 MuiInputLabel-root-7 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14"
      data-shrink={true}
    >
      Filter Tracks
    </label>
    <div
      className="MuiInputBase-root-38 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-formControl-39 MuiInput-formControl-26 MuiInputBase-adornedStart-42 MuiInputBase-adornedEnd-43"
      onClick={[Function]}
    >
      <div
        className="MuiInputAdornment-root-55 MuiInputAdornment-positionStart-57"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-59"
        >
          search
        </span>
      </div>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-48 MuiInput-input-33 MuiInputBase-inputAdornedStart-53 MuiInputBase-inputAdornedEnd-54"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <div
        className="MuiInputAdornment-root-55 MuiInputAdornment-positionStart-57"
      >
        <button
          className="MuiButtonBase-root-74 MuiIconButton-root-68"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-73"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-59"
            >
              clear
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-87"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    className="MuiFormGroup-root-85"
  >
    <label
      aria-describedby={null}
      className="MuiFormControlLabel-root-101"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title=""
    >
      <span
        className="MuiButtonBase-root-74 MuiIconButton-root-68 MuiPrivateSwitchBase-root-113 MuiCheckbox-root-107 MuiCheckbox-colorSecondary-112 MuiPrivateSwitchBase-checked-114 MuiCheckbox-checked-108"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-73"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-117"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="MuiPrivateSwitchBase-input-116"
            data-indeterminate={false}
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-87"
        />
      </span>
      <span
        className="MuiTypography-root-126 MuiTypography-body1-135 MuiFormControlLabel-label-106"
      >
        Foo Track
      </span>
    </label>
    <label
      aria-describedby={null}
      className="MuiFormControlLabel-root-101"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title=""
    >
      <span
        className="MuiButtonBase-root-74 MuiIconButton-root-68 MuiPrivateSwitchBase-root-113 MuiCheckbox-root-107 MuiCheckbox-colorSecondary-112 MuiPrivateSwitchBase-checked-114 MuiCheckbox-checked-108"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-73"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-117"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="MuiPrivateSwitchBase-input-116"
            data-indeterminate={false}
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-87"
        />
      </span>
      <span
        className="MuiTypography-root-126 MuiTypography-body1-135 MuiFormControlLabel-label-106"
      >
        Bar Track
      </span>
    </label>
  </div>
</div>
`;

exports[`HierarchicalTrackSelector drawer widget renders with just the required model elements 1`] = `
<div
  className="inject-HierarchicalTrackSelector-with-rootModel-root-1"
>
  <div
    className="MuiFormControl-root-3"
  >
    <label
      className="MuiFormLabel-root-18 MuiFormLabel-error-21 MuiInputLabel-error-10 MuiInputLabel-root-7 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14"
      data-shrink={true}
    >
      Filter Tracks
    </label>
    <div
      className="MuiInputBase-root-38 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-error-44 MuiInput-error-30 MuiInputBase-formControl-39 MuiInput-formControl-26 MuiInputBase-adornedStart-42 MuiInputBase-adornedEnd-43"
      onClick={[Function]}
    >
      <div
        className="MuiInputAdornment-root-55 MuiInputAdornment-positionStart-57"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-59"
        >
          search
        </span>
      </div>
      <input
        aria-invalid={true}
        className="MuiInputBase-input-48 MuiInput-input-33 MuiInputBase-inputAdornedStart-53 MuiInputBase-inputAdornedEnd-54"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <div
        className="MuiInputAdornment-root-55 MuiInputAdornment-positionStart-57"
      >
        <button
          className="MuiButtonBase-root-74 MuiIconButton-root-68"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-73"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-59"
            >
              clear
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-87"
          />
        </button>
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-77 MuiFormHelperText-error-78"
    >
      No matches
    </p>
  </div>
  <div
    className="MuiFormGroup-root-85"
  />
</div>
`;
